[gd_scene load_steps=3 format=3 uid="uid://dwotv13xethd6"]

[ext_resource type="Script" path="res://ui/sandbox/sandbox.gd" id="1_dcr83"]
[ext_resource type="Script" path="res://camera/camera_controls.gd" id="2_wv2im"]

[node name="Sandbox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dcr83")

[node name="World" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="World"]
position = Vector2(752, 450)
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("2_wv2im")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ControlPanel" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ControlPanel"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/ControlPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Back"

[node name="InfoPanelsContainer" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme_override_constants/separation = 10
alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="UI/ControlPanel/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
